<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2018 Seo Jeonggyu.

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<resources>
    <string name="app_name">Sample</string>

    <string name="btn_function_camera">Camera</string>
    <string name="btn_function_picture">Only Pictures</string>
    <string name="btn_function_video">Only Videos</string>

    <string name="btn_plus">+</string>
    <string name="btn_ok">OK</string>

    <string name="title_camera">Camera</string>
    <string name="menu_camera_image">Image</string>
    <string name="menu_camera_video">Video</string>

    <string name="title_image_select">Select image</string>
    <string name="menu_image_select">Image</string>

    <string name="title_video_select">Select video</string>
    <string name="menu_video_select">Video</string>

    <string name="menu_preview">Gallery</string>
    <string name="checkable">Checkable Options</string>
    <string name="canceled">Canceled</string>
    <string name="no_selected">Please select, first.</string>

    <string name="hint_image_preview_click">Click on a item to preview them.</string>

    <string name="checkbox_look">Never look again</string>

    <string name="new_folder">New Album</string>
    <string name="new_folder_hint">Vacation</string>
    <string name="btn_add">Add</string>
    <string name="btn_cancel">Cancel</string>

    <string name="question_content">Are you sure?</string>
    <string name="question_yes">Yes</string>
    <string name="question_no">No</string>

    <string name="help">Note: The app does not modify the original picture or video. However, only the user-created album structure is used.\n Deleting the original will also delete it from the app. In addition, the original remains when deleted from the app.</string>

</resources>
