<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/MediaAlbum.MatchParent">

    <include layout="@layout/toolbar_scroll" />

    <android.support.v4.widget.NestedScrollView
        style="@style/MediaAlbum.MatchParent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            style="@style/MediaAlbum.WrapContent.WidthMatchParent"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_camera"
                style="@style/MediaAlbum.Button.Main"
                android:text="@string/btn_function_camera" />

            <LinearLayout
                style="@style/MediaAlbum.WrapContent.WidthMatchParent"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_image"
                    style="@style/MediaAlbum.Button.Main"
                    android:layout_weight="1"
                    android:text="@string/btn_function_picture" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_video"
                    style="@style/MediaAlbum.Button.Main"
                    android:layout_weight="1"
                    android:text="@string/btn_function_video" />
            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>